# python_package

./: .gitignore  Pipfile  README.md  git_pull.sh  git_push.sh  one_key.sh  pyproject.toml
python_example/00_sample/: pyproject.toml
python_example/00_sample/project/: main.py
python_example/00_sample/project/code/: for_data.py
python_template/01_package/: README.md  poetry.bat  pyproject.toml
python_template/01_package/package/: setup.py
python_template/01_package/project/: main.py
python_template/01_package/project/app/: __init__.py
python_template/01_package/project/app/plugins/: utils.py
python_template/03_flask_jinja/: README.md  poetry.sh  pyproject.toml
python_template/03_flask_jinja/package/linux/: start.sh
python_template/03_flask_jinja/package/wheel/: lbj_common-1.0-py3-none-any.whl
python_template/03_flask_jinja/project/: __init__.py  config.conf
python_template/03_flask_jinja/project/app/: __init__.py
python_template/03_flask_jinja/project/app/authority/: __init__.py
python_template/03_flask_jinja/project/app/plugins/: util_tool.py
python_template/03_flask_jinja/project/templates/: 404.html  __init__.py  layout.html
python_template/03_flask_jinja/project/templates/record/: record_static.html  record_view.html
python_template/03_flask_jinja/project/templates/upload/: upload_view.html
python_template/04_flask/: .gitignore  README.md  main.py  poetry.bat  poetry.sh  pyproject.toml
python_template/04_flask/docker/: Dockerfile  docker-compose.yml  lzma.py.bak  requirements.txt
python_template/04_flask/package/: setup.py
python_template/04_flask/package/wheel/: lbj_flask-2.0-py3-none-any.whl
python_template/04_flask/project/: config.conf  main.py
python_template/04_flask/project/app/: __init__.py  extensions.py  home.py
python_template/04_flask/project/app/api/: __init__.py  normal.py  restful.py
python_template/04_flask/project/app/common/: engine.py
python_template/04_flask/project/app/model/: restful_model.py
python_template/04_flask/project/app/plugins/: __init__.py
python_tool/02_tensorflow/: README.md  poetry.bat  pyproject.toml
python_tool/02_tensorflow/project/: demo1.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  main.py  poincare.py
python_tool/02_tensorflow/project/logs/: events.out.tfevents.1615188436.SNOW
python_tool/03_db2api/: README.md  main.py  pyproject.toml
python_tool/03_db2api/package/: setup.py
python_tool/03_db2api/package/linux/: stop.sh  test.sh
python_tool/03_db2api/package/wheel/: lbj_common-1.1-py3-none-any.whl  lbj_db-1.0-py3-none-any.whl  lbj_flask-1.0-py3-none-any.whl
python_tool/03_db2api/project/: __init__.py  config.conf  main.py
python_tool/03_db2api/project/app/: __init__.py  extensions.py
python_tool/03_db2api/project/app/common/: constant.py  database.py
python_tool/03_db2api/project/app/create_api/: __init__.py
python_tool/03_db2api/project/app/plugins/: db_engine_src_tool.py  engine_tool.py
python_tool/03_db2api/project/app/static/scripts/: common.js
python_tool/03_db2api/project/doc/: __init__.py
python_tool/03_db2api/project/doc/create_api/: temp_delete.docx  temp_get.docx  temp_get_list.docx  temp_post.docx  temp_put.docx
python_tool/03_db2api/project/templates/: index.html  layout.html
python_tool/03_db2api/project/templates/create_api/: __init__.py  index.html  index_col.html  index_delete.html  index_get.html  index_post.html  index_put.html
python_wheel/lbj_common/: README.md  poetry.bat  pyproject.toml  setup.py
python_wheel/lbj_common/lbj_common/: config_tool.py  decorator.py  file_tool.py  log_tool.py  time_tool.py  zip_tool.py
python_wheel/lbj_common/lbj_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_wheel/lbj_common/lbj_common/df/: df_tool.py
python_wheel/lbj_common/lbj_common/tests/: all.py  test_log_tool.py
python_wheel/lbj_db/: .gitignore  README.md  main.py  poetry.bat  poetry.sh  pyproject.toml  setup.py
python_wheel/lbj_db/lbj_db/: __init__.py  db_base_tool.py  db_engine_tool.py  db_session_tool.py  sql_tool.py
python_wheel/lbj_db/lbj_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_wheel/lbj_db/lbj_db/conn/: flask_conn_tool.py
python_wheel/lbj_db/lbj_db/df/: df_db_tool.py
python_wheel/lbj_db/lbj_db/tests/: test_db_engine_tool.py  test_db_insert.py
python_wheel/lbj_df/: README.md  poetry.bat  pyproject.toml  setup.py
python_wheel/lbj_df/lbj_df/: df_tool.py
python_wheel/lbj_df/lbj_df.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_wheel/lbj_df/lbj_df/db/: df_db_tool.py
python_wheel/lbj_excel/: README.md  build.bat  main.py  pyproject.toml  setup.py
python_wheel/lbj_excel/lbj_excel/: excel_tool.py
python_wheel/lbj_excel/lbj_excel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_wheel/lbj_flask/: README.md  main.py  pyproject.toml  setup.py
python_wheel/lbj_flask/lbj_flask/: extensions.py  ip_tool.py  orm_tool.py  request_tool.py  response_tool.py
python_wheel/lbj_flask/lbj_flask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_wheel/lbj_flask/lbj_flask/common/: constant.py
python_wheel/lbj_flask/lbj_flask/entity/: entity_base.py
python_wheel/lbj_flask/lbj_flask/enum/: del_flag.py
python_wheel/lbj_flask/lbj_flask/filter/: __init__.py  auth.py
python_wheel/lbj_flask/lbj_flask/res/: comm_res.py  page_res.py
python_wheel/lbj_word/: README.md  pyproject.toml  setup.py
python_wheel/lbj_word/lbj_word/: word_tool.py
python_wheel/lbj_word/lbj_word.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
warehouse/lbj_common/: main.py  pyproject.toml
warehouse/lbj_common/lhzl_common/: time_tool.py  type_tool.py
warehouse/lbj_common/lhzl_common/tests/: all.py
warehouse/lbj_db/: .gitignore  README.md  pyproject.toml  setup.py
warehouse/lbj_db/lhzl_db/: db_base_tool.py  sql_tool.py
warehouse/lbj_db/lhzl_db/conn/: db_conn_tool.py
warehouse/lbj_db/lhzl_db/entity/: ret_run_sql.py
warehouse/lbj_db/lhzl_db/tests/: test_db_engine_tool.py  test_db_insert.py
(+75 files in other folders)
