[tool.poetry]
name = "02_tensorflow"
version = "0.1.0"
description = "python项目框架"
authors = ["libaojie <libaojie@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cx-freeze = "^6.4.2"

lbj_common = {path = "package/wheel/lbj_common-1.1-py3-none-any.whl"}
tensorflow = "1.13.1"

[tool.poetry.dev-dependencies]
[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"