[tool.poetry]
name = "lbj_common_venv"
version = "0.1.0"
description = ""
authors = ["libaojie <libaojie@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "19.2.0"
wheel = "0.34.2"


[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

