[tool.poetry]
name = "lbj_db_venv"
version = "0.1.0"
description = ""
authors = ["libaojie <libaojie@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "1.2.0"
pymysql = "0.8.0"
cx_oracle = "8.1.0"

lbj-common = {path = "../lbj_common/dist/lbj_common-1.0-py3-none-any.whl"}
lbj-df = {path = "../lbj_df/dist/lbj_df-1.0-py3-none-any.whl"}




[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

