[tool.poetry]
name = "lbj_excel_venv"
version = "0.1.0"
description = ""
authors = ["libaojie <libaojie@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
xlrd = "1.1.0"
xlutils = "2.0.0"
setuptools = "19.2.0"
wheel = "0.34.2"

lbj-common = {path = "../lbj_common/dist/lbj_common-1.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

