[tool.poetry]
name = "lbj_flask_venv"
version = "0.1.0"
description = ""
authors = ["libaojie <libaojie@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gevent = "1.4.0"
gunicorn = "19.9.0"
Werkzeug = "0.15"
flask = "0.12.1"
requests = "2.18.4"
flask-restful = "0.3.6"
flask-sqlalchemy = "2.3.0"
flask-cors = "3.0.4"

lbj-common = {path = "../lbj_common/dist/lbj_common-1.0-py3-none-any.whl"}
lbj-db = {path = "../lbj_db/dist/lbj_db-1.0-py3-none-any.whl"}



[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

