[tool.poetry]
name = "lbj_flask_venv"
version = "0.1.0"
description = ""
authors = ["libaojie <libaojie@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "22.3"

lbj-common = {path = "../lbj_common/dist/lbj_common-2.0-py3-none-any.whl"}
lbj-db = {path = "../lbj_db/dist/lbj_db-2.0-py3-none-any.whl"}

gevent = "22.10.1"
gunicorn = "20.1.0"
Werkzeug = "2.2.2"
requests = "2.28.1"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

