[tool.poetry]
name = "lbj_word_venv"
version = "0.1.0"
description = ""
authors = ["libaojie <libaojie@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
docxtpl = "0.4.13"
lbj-common = {path = "../lbj_common/dist/lbj_common-1.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

