[tool.poetry]
name = "lhzl_db_venv"
version = "0.1.0"
description = ""
authors = ["libaojie <libaojie@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "1.2.0"
pymysql = "0.8.0"
cx-oracle = "6.2.1"
lhzl-common = {path = "../lhzl_common/dist/lhzl_common-0.3-py3-none-any.whl"}



[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

